--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,9 +9,9 @@
         <div class="card mb-3" >
             <div class="col-md-4">
                 <%if(campground.images.length) {%>
-                    <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                    <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=campground.images[0].url%>">
                     <% }else {%>
-                    <img class="img-fluid" alt="" src="https://res.cloudinary.com/dmnf19is4/image/upload/v1693072723/YelpCamp/mr59fab6g0tlmgc4iqty.jpg">                    <% } %>
+                    <img crossorigin="anonymous" class="img-fluid" alt="" src="https://res.cloudinary.com/dmnf19is4/image/upload/v1693072723/YelpCamp/mr59fab6g0tlmgc4iqty.jpg">                    <% } %>
                 <div class="col-md-8">
                     <div class="card-body">
                     <h5 class="card-title"><%= campground.title  %></h5>
